--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -8,20 +8,20 @@
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/plugins.css" rel="stylesheet" type="text/css">
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/assets/css/plugins.css" rel="stylesheet" type="text/css">
     <!-- END GLOBAL MANDATORY STYLES -->
 
     <!--  BEGIN CUSTOM STYLE FILE  -->
-    <link href="assets/css/elements/miscellaneous.css" rel="stylesheet" type="text/css">
+    <link href="/assets/css/elements/miscellaneous.css" rel="stylesheet" type="text/css">
     <!--  END CUSTOM STYLE FILE  -->
 
-    <link href="assets/css/authentication/form-1.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/authentication/form-1.css" rel="stylesheet" type="text/css" />
     <!-- END GLOBAL MANDATORY STYLES -->
-    <link rel="stylesheet" type="text/css" href="assets/css/forms/theme-checkbox-radio.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/forms/switches.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/forms/theme-checkbox-radio.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/forms/switches.css" />
 
-    <link rel="stylesheet" type="text/css" href="assets/css/components/tabs-accordian/custom-tabs.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/components/tabs-accordian/custom-tabs.css">
 
     <style>
         .revert {
@@ -52,7 +52,7 @@
         }
     </style>
 
-    <link href="plugins/loaders/custom-loader.css" rel="stylesheet" type="text/css">
+    <link href="/plugins/loaders/custom-loader.css" rel="stylesheet" type="text/css">
 </head>
 
 <body data-spy="scroll" data-target="#navSection" data-offset="140">
@@ -78,23 +78,23 @@
 
 
                 <!-- BEGIN GLOBAL MANDATORY STYLES -->
-                <script src="assets/js/libs/jquery-3.1.1.min.js"></script>
-                <script src="bootstrap/js/popper.min.js"></script>
-                <script src="bootstrap/js/bootstrap.min.js"></script>
-                <script src="plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-                <script src="assets/js/app.js"></script>
+                <script src="/assets/js/libs/jquery-3.1.1.min.js"></script>
+                <script src="/bootstrap/js/popper.min.js"></script>
+                <script src="/bootstrap/js/bootstrap.min.js"></script>
+                <script src="/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+                <script src="/assets/js/app.js"></script>
 
                 <script>
                     $(document).ready(function () {
                         App.init();
                     });
                 </script>
-                <script src="plugins/highlight/highlight.pack.js"></script>
-                <script src="assets/js/custom.js"></script>
+                <script src="/plugins/highlight/highlight.pack.js"></script>
+                <script src="/assets/js/custom.js"></script>
                 <!-- END GLOBAL MANDATORY STYLES -->
 
                 <!-- BEGIN PAGE LEVEL SCRIPTS -->
-                <script src="assets/js/scrollspyNav.js"></script>
+                <script src="/assets/js/scrollspyNav.js"></script>
 
                 <!-- END PAGE LEVEL SCRIPTS -->
 
