--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -61,6 +61,8 @@
 
 
 
+        <script src="/assets/js/libs/jquery-3.1.1.min.js"></script>
+        <script src="/plugins/jquery-ui/jquery-ui.min.js"></script>
 
         <%- body %>
 
@@ -78,7 +80,6 @@
 
 
                 <!-- BEGIN GLOBAL MANDATORY STYLES -->
-                <script src="/assets/js/libs/jquery-3.1.1.min.js"></script>
                 <script src="/bootstrap/js/popper.min.js"></script>
                 <script src="/bootstrap/js/bootstrap.min.js"></script>
                 <script src="/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
@@ -95,6 +96,8 @@
 
                 <!-- BEGIN PAGE LEVEL SCRIPTS -->
                 <script src="/assets/js/scrollspyNav.js"></script>
+
+
 
                 <!-- END PAGE LEVEL SCRIPTS -->
 
