--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -55,7 +55,7 @@
 
             <ul class="list-unstyled menu-categories ps ps--active-y" id="accordionExample">
                 <li class="menu mt-5">
-                    <a href="fonticons.html" aria-expanded="false" class="dropdown-toggle">
+                    <a href="/dormitory/student" aria-expanded="false" class="dropdown-toggle">
                         <div class="">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -69,7 +69,7 @@
                     </a>
                 </li>
                 <li class="menu">
-                    <a href="fonticons.html" aria-expanded="false" class="dropdown-toggle">
+                    <a href="/dormitory/notice-board" aria-expanded="false" class="dropdown-toggle">
                         <div class="">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
