--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -27,16 +27,17 @@
                             </li>
                         </ol>
                     </nav>
-                    <nav class="breadcrumb-one mr-3" aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="d-flex justify-content-end align-items-center"><a href="#">Elements</a>
-                            </li>
-                        </ol>
-                    </nav>
 
                 </div>
             </li>
         </ul>
+        <div class="ml-auto mr-auto pr-2 pl-2 text-white h-100 bg-dark d-flex justify-content-center align-items-center"
+            style="margin-left:auto;">Current
+            Page Name
+        </div>
+        <a href="#" class="ml-auto mr-5 pr-2 pl-2 text-black h-100 d-flex justify-content-center align-items-center"
+            style="margin-left:auto;">login/logout
+        </a>
     </header>
 </div>
 <!--  END NAVBAR  -->
