--- a/views/notice-board/index.ejs
+++ b/views/notice-board/index.ejs
@@ -2,6 +2,8 @@
 
     <link href="/assets/css/apps/scrumboard.css" rel="stylesheet" type="text/css">
     <link href="/assets/css/forms/theme-checkbox-radio.css" rel="stylesheet" type="text/css">
+    <link href="/assets/css/users/account-setting.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="/plugins/dropify/dropify.min.css">
     <!--  BEGIN CONTENT AREA  -->
     <div id="content" class="main-content mt-5 pt-3">
         <div class="layout-px-spacing">
@@ -24,7 +26,7 @@
                                                 data-parent="#add_task_accordion">
                                                 <div class="card-body">
                                                     <form action="javascript:void(0);">
-                                                        <div class="row d-none">
+                                                        <div class="row">
                                                             <div class="col-md-12">
                                                                 <div class="task-title mb-4">
                                                                     <svg xmlns="http://www.w3.org/2000/svg" width="24"
@@ -37,7 +39,8 @@
                                                                             d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z">
                                                                         </path>
                                                                     </svg>
-                                                                    <input id="s-task" type="text" placeholder="Task"
+                                                                    <input id="s-task" type="text"
+                                                                        placeholder="Notice Heading"
                                                                         class="form-control" name="task">
                                                                 </div>
                                                             </div>
@@ -55,8 +58,20 @@
                                                                             points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
                                                                         </polygon>
                                                                     </svg>
-                                                                    <textarea id="s-text" placeholder="Task Text"
+                                                                    <textarea id="s-text" placeholder="Notice Text"
                                                                         class="form-control" name="taskText"></textarea>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="col-md-12">
+                                                                <div class="upload mt-4 pr-md-4">
+                                                                    <input type="file" id="input-file-max-fs"
+                                                                        class="dropify" data-default-file=""
+                                                                        data-max-file-size="2M" />
+                                                                    <p class="mt-2"><i
+                                                                            class="flaticon-cloud-upload mr-1"></i>
+                                                                        Upload File</p>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -106,7 +121,7 @@
                                                         <line x1="3" y1="12" x2="3" y2="12"></line>
                                                         <line x1="3" y1="18" x2="3" y2="18"></line>
                                                     </svg>
-                                                    <input id="s-list-name" type="text" placeholder="List Name"
+                                                    <input id="s-list-name" type="text" placeholder="Notice Name"
                                                         class="form-control" name="task">
                                                 </div>
                                             </div>
@@ -147,13 +162,13 @@
                                     <line x1="14" y1="11" x2="14" y2="17"></line>
                                 </svg>
                             </div>
-                            <h5 class="modal-title" id="exampleModalLabel">Delete the task?</h5>
+                            <h5 class="modal-title" id="exampleModalLabel">Delete the Notice?</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">×</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p class="">If you delete the task it will be gone forever. Are you sure you want to
+                            <p class="">If you delete the Notice it will be gone forever. Are you sure you want to
                                 proceed?</p>
                         </div>
                         <div class="modal-footer">
@@ -167,32 +182,12 @@
             <div class="row scrumboard" id="cancel-row">
                 <div class="col-lg-12 layout-spacing">
 
-                    <div class="task-list-section">
+                    <div class="task-list-section flex-wrap">
 
-                        <div data-section="s-new" class="task-list-container accha" data-connect="sorting">
+                        <div data-section="s-new" class="task-list-container mb-4" data-connect="sorting">
                             <div class="connect-sorting">
                                 <div class="task-container-header">
                                     <h6 class="s-heading" data-listtitle="In Progress">Food Menu</h6>
-                                    <div class="dropdown">
-                                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink-1"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round"
-                                                class="feather feather-more-horizontal">
-                                                <circle cx="12" cy="12" r="1"></circle>
-                                                <circle cx="19" cy="12" r="1"></circle>
-                                                <circle cx="5" cy="12" r="1"></circle>
-                                            </svg>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right"
-                                            aria-labelledby="dropdownMenuLink-1">
-                                            <a class="dropdown-item list-edit" href="javascript:void(0);">Edit</a>
-                                            <a class="dropdown-item list-delete" href="javascript:void(0);">Delete</a>
-                                            <a class="dropdown-item list-clear-all" href="javascript:void(0);">Clear
-                                                All</a>
-                                        </div>
-                                    </div>
                                 </div>
 
                                 <div class="connect-sorting-content ui-sortable" data-sortable="true">
@@ -203,14 +198,43 @@
                                             <div class="task-header">
                                                 <div class="">
                                                     <h4 class="" data-tasktitle="Creating a new Portfolio on Dribble">
-                                                        Creating a
-                                                        new Portfolio on Dribble</h4>
+                                                        Following File contains updated Mess Menu</h4>
                                                 </div>
                                             </div>
 
-                                            <div class="task-body">
+                                            <div class="task-body ml-2">
+                                                <div class="task-content">
+                                                    <p class="" data-tasktext="">This menu is prone to changes
+                                                        depending on budget</p>
+                                                    <div class="row">
+                                                        <div class="col-md-12">
+                                                            <div class=" mt-4 pr-md-4">
+                                                                <a class="dropify-wrapper has-preview"
+                                                                    href="/test.docx">
+                                                                    <div class="dropify-message"><span
+                                                                            class="file-icon"></span>
+                                                                        <p>Click to Upload or Drag n Drop</p>
+                                                                        <p class="dropify-error">Ooops, something wrong
+                                                                            appended.</p>
+                                                                    </div>
+                                                                    <div class="dropify-loader" style="display: none;">
+                                                                    </div>
+                                                                    <div class="dropify" data-default-file="/test.docx">
+                                                                    </div><button type="button" class="dropify-clear"><i
+                                                                            class="flaticon-close-fill"></i></button>
+                                                                    <div class="dropify-preview"
+                                                                        style="display: block;">
+                                                                        <span class="dropify-render"><i
+                                                                                class="dropify-font-file"></i><span
+                                                                                class="dropify-extension">docx</span></span>
+                                                                    </div>
+                                                                </a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
 
-                                                <div class="task-bottom">
+                                                <div class="task-bottom m-0">
                                                     <div class="tb-section-1">
                                                         <span data-taskdate="08 Aug 2020"><svg
                                                                 xmlns="http://www.w3.org/2000/svg" width="24"
@@ -248,6 +272,7 @@
                                                             <line x1="10" y1="11" x2="10" y2="17"></line>
                                                             <line x1="14" y1="11" x2="14" y2="17"></line>
                                                         </svg>
+
                                                     </div>
                                                 </div>
 
@@ -264,6 +289,7 @@
                 </div>
             </div>
 
+
         </div>
     </div>
     </div>
@@ -274,6 +300,9 @@
 
     <script src="/assets/js/ie11fix/fn.fix-padStart.js"></script>
     <script src="/assets/js/apps/scrumboard.js"></script>
+    <script src="/plugins/dropify/dropify.min.js"></script>
+    <script src="/plugins/blockui/jquery.blockUI.min.js"></script>
+    <script src="/assets/js/users/account-settings.js"></script>
 
     <script>
         document.querySelector('.add-tsk').addEventListener('click', function (evt) {
