--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -110,18 +110,18 @@
                     </a>
                     <ul class="collapse submenu list-unstyled" id="components" data-parent="#accordionExample">
                         <li>
-                            <a href="component_tabs.html"> Write Complaint </a>
+                            <a href="/dormitory/post-complaint"> Write Complaint </a>
                         </li>
                     </ul>
                     <ul class="collapse submenu list-unstyled" id="components" data-parent="#accordionExample">
                         <li>
-                            <a href="component_tabs.html"> Complaint Log </a>
+                            <a href="/dormitory/complaint-log"> Complaint Log </a>
                         </li>
                     </ul>
                 </li>
 
                 <li class="menu">
-                    <a href="fonticons.html" aria-expanded="false" class="dropdown-toggle">
+                    <a href="/dormitory/pass-request" aria-expanded="false" class="dropdown-toggle">
                         <div class="">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -131,6 +131,34 @@
                                 <circle cx="12" cy="12" r="2"></circle>
                             </svg>
                             <span>Send Pass Request</span>
+                        </div>
+                    </a>
+                </li>
+                <li class="menu">
+                    <a href="/surveillance" aria-expanded="false" class="dropdown-toggle">
+                        <div class="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-target">
+                                <circle cx="12" cy="12" r="10"></circle>
+                                <circle cx="12" cy="12" r="6"></circle>
+                                <circle cx="12" cy="12" r="2"></circle>
+                            </svg>
+                            <span>Surveillance</span>
+                        </div>
+                    </a>
+                </li>
+                <li class="menu">
+                    <a href="/post-face" aria-expanded="false" class="dropdown-toggle">
+                        <div class="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-target">
+                                <circle cx="12" cy="12" r="10"></circle>
+                                <circle cx="12" cy="12" r="6"></circle>
+                                <circle cx="12" cy="12" r="2"></circle>
+                            </svg>
+                            <span>Register</span>
                         </div>
                     </a>
                 </li>
