--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -56,16 +56,18 @@
 
             <ul class="list-unstyled menu-categories ps ps--active-y" id="accordionExample">
                 <li class="menu mt-5">
-                    <a href="/dormitory/student" aria-expanded="false" class="dropdown-toggle">
+                    <a href="/dormitory/student" aria-expanded="false"
+                        class="dropdown-toggle d-flex align-items-center justify-content-center">
                         <div class="">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-target">
-                                <circle cx="12" cy="12" r="10"></circle>
-                                <circle cx="12" cy="12" r="6"></circle>
-                                <circle cx="12" cy="12" r="2"></circle>
-                            </svg>
-                            <span>Profile</span>
+                            <div class="media d-flex flex-column align-items-center justify-content-center">
+                                <div class="w-img mb-2">
+                                    <img src="/assets/img/AftabProfile1.jpg" alt="avatar">
+                                </div>
+                                <div class="media-body d-flex flex-column align-items-center justify-content-center">
+                                    <h6>Aftab Alam</h6>
+                                    <p class="meta-date-time">Monday, Nov 18</p>
+                                </div>
+                            </div>
                         </div>
                     </a>
                 </li>
@@ -116,6 +118,38 @@
                     <ul class="collapse submenu list-unstyled" id="components" data-parent="#accordionExample">
                         <li>
                             <a href="/dormitory/complaint-log"> Complaint Log </a>
+                        </li>
+                    </ul>
+                </li>
+
+
+
+                <li class="menu">
+                    <a href="#dashboard" data-active="true" data-toggle="collapse" aria-expanded="false"
+                        class="dropdown-toggle collapsed">
+                        <div class="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-home">
+                                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                                <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                            </svg>
+                            <span>Dashboard</span>
+                        </div>
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-chevron-right">
+                                <polyline points="9 18 15 12 9 6"></polyline>
+                            </svg>
+                        </div>
+                    </a>
+                    <ul class="submenu list-unstyled collapse" id="dashboard" data-parent="#accordionExample" style="">
+                        <li>
+                            <a href="index-2.html"> Sales </a>
+                        </li>
+                        <li class="active">
+                            <a href="index2.html"> Analytics </a>
                         </li>
                     </ul>
                 </li>
