--- a/views/student/profile.ejs
+++ b/views/student/profile.ejs
@@ -22,7 +22,7 @@
                                     </svg></a>
                             </div>
                             <div class="text-center user-info">
-                                <img width="90" height="90" src="/assets/img/profile-25.jpg" alt="avatar">
+                                <img width="90" height="90" src="/assets/img/AftabProfile1.jpg" alt="avatar">
                                 <p class="">Aftab</p>
                             </div>
                             <div class="user-info-list">
