--- a/views/student/pass-request.ejs
+++ b/views/student/pass-request.ejs
@@ -82,7 +82,10 @@
                                     </div>
 
                                 </fieldset>
-                                <button class="btn btn-primary mt-3" type="submit">Submit Request</button>
+                                <div class="d-flex justify-content-end">
+                                    <button class="btn btn-primary mt-3" type="submit">Submit Request</button>
+
+                                </div>
                             </form>
                         </div>
                     </div>
