--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -33,7 +33,7 @@
         </ul>
         <div class="ml-auto mr-auto pr-2 pl-2 text-white h-100 bg-dark d-flex justify-content-center align-items-center"
             style="margin-left:auto;">Current
-            Page Name
+            Page Name will appear here
         </div>
         <a href="#" class="ml-auto mr-5 pr-2 pl-2 text-black h-100 d-flex justify-content-center align-items-center"
             style="margin-left:auto;">login/logout
@@ -106,14 +106,16 @@
                         </div>
                     </a>
                     <ul class="submenu list-unstyled collapse" id="dashboard" data-parent="#accordionExample" style="">
-                        <li>
+                        <li class="">
                             <a href="/dormitory/post-pass-request"> Send Pass Request </a>
                         </li>
                         <li class="">
                             <a href="/dormitory/pass-request-status"> Pass request Status </a>
                         </li>
-                        <li class="">
-                            <a href="/dormitory/admin/pass-requests"> Pass Requests </a>
+                        <li class="d-flex justify-content-center">
+                            <a href="/dormitory/admin/pass-requests">
+                                Pass Requests & Status
+                            </a>
                         </li>
                     </ul>
                 </li>
